# dateconverter

./: Makefile  PKGBUILD  README  README.md  config.h.in  configure  configure.ac  dateconverter  dateconverter.c  dateconverter.h  dc.c  ndc  util  util.c
src/: Makefile.am  Makefile.in  dateconverter.c  dc.c  util.c  util.h
